<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Randroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="nomades">Nomades</string>


    <!--ActionBar menu-->
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="legal">Legal Notices</string>
    <string name="settings">Settings</string>

    <!--Map marker titles-->
    <string name="startingLocation">Start</string>
    <string name="pauseLocation">Pause</string>
    <string name="myLocation">You Are Here</string>
    <string name="randoLocation">Raoul is here</string>

    <!--Displayed in a toast when Gmaps v2 is not installed on the device-->
    <string name="no_maps">Google Maps V2 not available!</string>

    <!--Download error-->
    <string name="network_error">Couldn't connect to server, please check your internet connection</string>
    <string name="read_error">Couldn't download the Rando (%1$s)</string>

    <string name="rollers_coquillages_server">http://www.rollers-coquillages.org</string>
    <string name="resetRandos">Refresh Randos</string>
    <string name="getLocation">Get Location</string>
    <string name="refresh_rando">Refresh Current Rando</string>

    <string name="icons_license">Map Icons by : Maps Icons Collection http://mapicons.nicolasmollet.com</string>
</resources>
