<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/refresh_rando"
          android:title="@string/refresh_rando"
          android:icon="@drawable/ic_action_refresh"
          android:showAsAction="ifRoom"/>

    <item android:id="@+id/reset_randos"
          android:title="@string/resetRandos"
          android:showAsAction="never" />

    <item
            android:id="@+id/settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:showAsAction="never"
            android:title="@string/settings"/>

    <item
            android:id="@+id/about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:showAsAction="never"
            android:title="@string/about"/>

    <item
            android:id="@+id/legal"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/legal"/>
</menu>